parser/src/snapshots/rustpython_parser__parser__tests__parse_class_with_generic_type_with_tuple_bound.snap
---
source: parser/src/parser.rs
expression: "ast::Suite::parse(source, \"<test>\").unwrap()"
---
[
    ClassDef(
        StmtClassDef {
            range: 0..40,
            name: Identifier(
                "Foo",
            ),
            bases: [
                Name(
                    ExprName {
                        range: 27..28,
                        id: Identifier(
                            "A",
                        ),
                        ctx: Load,
                    },
                ),
                Name(
                    ExprName {
                        range: 30..31,
                        id: Identifier(
                            "B",
                        ),
                        ctx: Load,
                    },
                ),
            ],
            keywords: [],
            body: [
                Pass(
                    StmtPass {
                        range: 36..40,
                    },
                ),
            ],
            decorator_list: [],
            type_params: [
                TypeVar(
                    TypeParamTypeVar {
                        range: 10..25,
                        name: Identifier(
                            "T",
                        ),
                        bound: Some(
                            Tuple(
                                ExprTuple {
                                    range: 13..25,
                                    elts: [
                                        Name(
                                            ExprName {
                                                range: 14..17,
                                                id: Identifier(
                                                    "str",
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                        Name(
                                            ExprName {
                                                range: 19..24,
                                                id: Identifier(
                                                    "bytes",
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                    ctx: Load,
                                },
                            ),
                        ),
                    },
                ),
            ],
        },
    ),
]
