parser/src/snapshots/rustpython_parser__parser__tests__parse_class_with_multiple_generic_types.snap
---
source: parser/src/parser.rs
expression: "ast::Suite::parse(source, \"<test>\").unwrap()"
---
[
    ClassDef(
        StmtClassDef {
            range: 0..29,
            name: Identifier(
                "Foo",
            ),
            bases: [
                Name(
                    ExprName {
                        range: 16..17,
                        id: Identifier(
                            "A",
                        ),
                        ctx: Load,
                    },
                ),
                Name(
                    ExprName {
                        range: 19..20,
                        id: Identifier(
                            "B",
                        ),
                        ctx: Load,
                    },
                ),
            ],
            keywords: [],
            body: [
                Pass(
                    StmtPass {
                        range: 25..29,
                    },
                ),
            ],
            decorator_list: [],
            type_params: [
                TypeVar(
                    TypeParamTypeVar {
                        range: 10..11,
                        name: Identifier(
                            "T",
                        ),
                        bound: None,
                    },
                ),
                TypeVar(
                    TypeParamTypeVar {
                        range: 13..14,
                        name: Identifier(
                            "U",
                        ),
                        bound: None,
                    },
                ),
            ],
        },
    ),
]
