parser/src/snapshots/rustpython_parser__parser__tests__parse_dict_comprehension.snap
---
source: parser/src/parser.rs
expression: parse_ast
---
Attributed {
    range: 0..19,
    custom: (),
    node: DictComp(
        ExprDictComp {
            key: Attributed {
                range: 1..3,
                custom: (),
                node: Name(
                    ExprName {
                        id: Identifier(
                            "x1",
                        ),
                        ctx: Load,
                    },
                ),
            },
            value: Attributed {
                range: 5..7,
                custom: (),
                node: Name(
                    ExprName {
                        id: Identifier(
                            "x2",
                        ),
                        ctx: Load,
                    },
                ),
            },
            generators: [
                Comprehension {
                    target: Attributed {
                        range: 12..13,
                        custom: (),
                        node: Name(
                            ExprName {
                                id: Identifier(
                                    "y",
                                ),
                                ctx: Store,
                            },
                        ),
                    },
                    iter: Attributed {
                        range: 17..18,
                        custom: (),
                        node: Name(
                            ExprName {
                                id: Identifier(
                                    "z",
                                ),
                                ctx: Load,
                            },
                        ),
                    },
                    ifs: [],
                    is_async: Int(
                        0,
                    ),
                },
            ],
        },
    ),
}
