parser/src/snapshots/rustpython_parser__parser__tests__parse_double_list_comprehension.snap
---
source: parser/src/parser.rs
expression: parse_ast
---
Attributed {
    range: 0..48,
    custom: (),
    node: ListComp(
        ExprListComp {
            elt: Attributed {
                range: 1..2,
                custom: (),
                node: Name(
                    ExprName {
                        id: Identifier(
                            "x",
                        ),
                        ctx: Load,
                    },
                ),
            },
            generators: [
                Comprehension {
                    target: Attributed {
                        range: 7..12,
                        custom: (),
                        node: Tuple(
                            ExprTuple {
                                elts: [
                                    Attributed {
                                        range: 7..8,
                                        custom: (),
                                        node: Name(
                                            ExprName {
                                                id: Identifier(
                                                    "y",
                                                ),
                                                ctx: Store,
                                            },
                                        ),
                                    },
                                    Attributed {
                                        range: 10..12,
                                        custom: (),
                                        node: Name(
                                            ExprName {
                                                id: Identifier(
                                                    "y2",
                                                ),
                                                ctx: Store,
                                            },
                                        ),
                                    },
                                ],
                                ctx: Store,
                            },
                        ),
                    },
                    iter: Attributed {
                        range: 16..17,
                        custom: (),
                        node: Name(
                            ExprName {
                                id: Identifier(
                                    "z",
                                ),
                                ctx: Load,
                            },
                        ),
                    },
                    ifs: [],
                    is_async: false,
                },
                Comprehension {
                    target: Attributed {
                        range: 22..23,
                        custom: (),
                        node: Name(
                            ExprName {
                                id: Identifier(
                                    "a",
                                ),
                                ctx: Store,
                            },
                        ),
                    },
                    iter: Attributed {
                        range: 27..28,
                        custom: (),
                        node: Name(
                            ExprName {
                                id: Identifier(
                                    "b",
                                ),
                                ctx: Load,
                            },
                        ),
                    },
                    ifs: [
                        Attributed {
                            range: 32..37,
                            custom: (),
                            node: Compare(
                                ExprCompare {
                                    left: Attributed {
                                        range: 32..33,
                                        custom: (),
                                        node: Name(
                                            ExprName {
                                                id: Identifier(
                                                    "a",
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                    ops: [
                                        Lt,
                                    ],
                                    comparators: [
                                        Attributed {
                                            range: 36..37,
                                            custom: (),
                                            node: Constant(
                                                ExprConstant {
                                                    value: Int(
                                                        5,
                                                    ),
                                                    kind: None,
                                                },
                                            ),
                                        },
                                    ],
                                },
                            ),
                        },
                        Attributed {
                            range: 41..47,
                            custom: (),
                            node: Compare(
                                ExprCompare {
                                    left: Attributed {
                                        range: 41..42,
                                        custom: (),
                                        node: Name(
                                            ExprName {
                                                id: Identifier(
                                                    "a",
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                    ops: [
                                        Gt,
                                    ],
                                    comparators: [
                                        Attributed {
                                            range: 45..47,
                                            custom: (),
                                            node: Constant(
                                                ExprConstant {
                                                    value: Int(
                                                        10,
                                                    ),
                                                    kind: None,
                                                },
                                            ),
                                        },
                                    ],
                                },
                            ),
                        },
                    ],
                    is_async: false,
                },
            ],
        },
    ),
}
