parser/src/snapshots/rustpython_parser__parser__tests__parse_f_string.snap
---
source: parser/src/parser.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 14,
            },
        ),
        custom: (),
        node: Expr(
            StmtExpr {
                value: Located {
                    location: Location {
                        row: 1,
                        column: 0,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 14,
                        },
                    ),
                    custom: (),
                    node: JoinedStr(
                        ExprJoinedStr {
                            values: [
                                Located {
                                    location: Location {
                                        row: 1,
                                        column: 0,
                                    },
                                    end_location: Some(
                                        Location {
                                            row: 1,
                                            column: 14,
                                        },
                                    ),
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Str(
                                                "Hello world",
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            },
        ),
    },
]
