parser/src/snapshots/rustpython_parser__parser__tests__parse_function_definition.snap
---
source: parser/src/parser.rs
expression: "ast::Suite::parse(source, \"<test>\").unwrap()"
---
[
    FunctionDef(
        StmtFunctionDef {
            range: 0..20,
            name: Identifier {
                id: "func",
                range: 4..8,
            },
            args: Arguments {
                range: 8..11,
                posonlyargs: [],
                args: [
                    ArgWithDefault {
                        range: 9..10,
                        def: Arg {
                            range: 9..10,
                            arg: Identifier {
                                id: "a",
                                range: 9..10,
                            },
                            annotation: None,
                            type_comment: None,
                        },
                        default: None,
                    },
                ],
                vararg: None,
                kwonlyargs: [],
                kwarg: None,
            },
            body: [
                Expr(
                    StmtExpr {
                        range: 17..20,
                        value: Constant(
                            ExprConstant {
                                range: 17..20,
                                value: Ellipsis,
                                kind: None,
                            },
                        ),
                    },
                ),
            ],
            decorator_list: [],
            returns: None,
            type_params: [],
            type_comment: None,
        },
    ),
    FunctionDef(
        StmtFunctionDef {
            range: 22..53,
            name: Identifier {
                id: "func",
                range: 26..30,
            },
            args: Arguments {
                range: 33..39,
                posonlyargs: [],
                args: [
                    ArgWithDefault {
                        range: 34..38,
                        def: Arg {
                            range: 34..38,
                            arg: Identifier {
                                id: "a",
                                range: 34..35,
                            },
                            annotation: Some(
                                Name(
                                    ExprName {
                                        range: 37..38,
                                        id: "T",
                                        ctx: Load,
                                    },
                                ),
                            ),
                            type_comment: None,
                        },
                        default: None,
                    },
                ],
                vararg: None,
                kwonlyargs: [],
                kwarg: None,
            },
            body: [
                Expr(
                    StmtExpr {
                        range: 50..53,
                        value: Constant(
                            ExprConstant {
                                range: 50..53,
                                value: Ellipsis,
                                kind: None,
                            },
                        ),
                    },
                ),
            ],
            decorator_list: [],
            returns: Some(
                Name(
                    ExprName {
                        range: 43..44,
                        id: "T",
                        ctx: Load,
                    },
                ),
            ),
            type_params: [
                TypeVar(
                    TypeParamTypeVar {
                        range: 31..32,
                        name: Identifier {
                            id: "T",
                            range: 31..32,
                        },
                        bound: None,
                    },
                ),
            ],
            type_comment: None,
        },
    ),
    FunctionDef(
        StmtFunctionDef {
            range: 55..91,
            name: Identifier {
                id: "func",
                range: 59..63,
            },
            args: Arguments {
                range: 71..77,
                posonlyargs: [],
                args: [
                    ArgWithDefault {
                        range: 72..76,
                        def: Arg {
                            range: 72..76,
                            arg: Identifier {
                                id: "a",
                                range: 72..73,
                            },
                            annotation: Some(
                                Name(
                                    ExprName {
                                        range: 75..76,
                                        id: "T",
                                        ctx: Load,
                                    },
                                ),
                            ),
                            type_comment: None,
                        },
                        default: None,
                    },
                ],
                vararg: None,
                kwonlyargs: [],
                kwarg: None,
            },
            body: [
                Expr(
                    StmtExpr {
                        range: 88..91,
                        value: Constant(
                            ExprConstant {
                                range: 88..91,
                                value: Ellipsis,
                                kind: None,
                            },
                        ),
                    },
                ),
            ],
            decorator_list: [],
            returns: Some(
                Name(
                    ExprName {
                        range: 81..82,
                        id: "T",
                        ctx: Load,
                    },
                ),
            ),
            type_params: [
                TypeVar(
                    TypeParamTypeVar {
                        range: 64..70,
                        name: Identifier {
                            id: "T",
                            range: 64..65,
                        },
                        bound: Some(
                            Name(
                                ExprName {
                                    range: 67..70,
                                    id: "str",
                                    ctx: Load,
                                },
                            ),
                        ),
                    },
                ),
            ],
            type_comment: None,
        },
    ),
    FunctionDef(
        StmtFunctionDef {
            range: 93..138,
            name: Identifier {
                id: "func",
                range: 97..101,
            },
            args: Arguments {
                range: 118..124,
                posonlyargs: [],
                args: [
                    ArgWithDefault {
                        range: 119..123,
                        def: Arg {
                            range: 119..123,
                            arg: Identifier {
                                id: "a",
                                range: 119..120,
                            },
                            annotation: Some(
                                Name(
                                    ExprName {
                                        range: 122..123,
                                        id: "T",
                                        ctx: Load,
                                    },
                                ),
                            ),
                            type_comment: None,
                        },
                        default: None,
                    },
                ],
                vararg: None,
                kwonlyargs: [],
                kwarg: None,
            },
            body: [
                Expr(
                    StmtExpr {
                        range: 135..138,
                        value: Constant(
                            ExprConstant {
                                range: 135..138,
                                value: Ellipsis,
                                kind: None,
                            },
                        ),
                    },
                ),
            ],
            decorator_list: [],
            returns: Some(
                Name(
                    ExprName {
                        range: 128..129,
                        id: "T",
                        ctx: Load,
                    },
                ),
            ),
            type_params: [
                TypeVar(
                    TypeParamTypeVar {
                        range: 102..117,
                        name: Identifier {
                            id: "T",
                            range: 102..103,
                        },
                        bound: Some(
                            Tuple(
                                ExprTuple {
                                    range: 105..117,
                                    elts: [
                                        Name(
                                            ExprName {
                                                range: 106..109,
                                                id: "str",
                                                ctx: Load,
                                            },
                                        ),
                                        Name(
                                            ExprName {
                                                range: 111..116,
                                                id: "bytes",
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                    ctx: Load,
                                },
                            ),
                        ),
                    },
                ),
            ],
            type_comment: None,
        },
    ),
    FunctionDef(
        StmtFunctionDef {
            range: 140..171,
            name: Identifier {
                id: "func",
                range: 144..148,
            },
            args: Arguments {
                range: 153..162,
                posonlyargs: [],
                args: [],
                vararg: Some(
                    Arg {
                        range: 155..161,
                        arg: Identifier {
                            id: "a",
                            range: 155..156,
                        },
                        annotation: Some(
                            Starred(
                                ExprStarred {
                                    range: 158..161,
                                    value: Name(
                                        ExprName {
                                            range: 159..161,
                                            id: "Ts",
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Load,
                                },
                            ),
                        ),
                        type_comment: None,
                    },
                ),
                kwonlyargs: [],
                kwarg: None,
            },
            body: [
                Expr(
                    StmtExpr {
                        range: 168..171,
                        value: Constant(
                            ExprConstant {
                                range: 168..171,
                                value: Ellipsis,
                                kind: None,
                            },
                        ),
                    },
                ),
            ],
            decorator_list: [],
            returns: None,
            type_params: [
                TypeVarTuple(
                    TypeParamTypeVarTuple {
                        range: 149..152,
                        name: Identifier {
                            id: "Ts",
                            range: 150..152,
                        },
                    },
                ),
            ],
            type_comment: None,
        },
    ),
    FunctionDef(
        StmtFunctionDef {
            range: 173..230,
            name: Identifier {
                id: "func",
                range: 177..181,
            },
            args: Arguments {
                range: 186..221,
                posonlyargs: [],
                args: [],
                vararg: Some(
                    Arg {
                        range: 188..200,
                        arg: Identifier {
                            id: "args",
                            range: 188..192,
                        },
                        annotation: Some(
                            Attribute(
                                ExprAttribute {
                                    range: 194..200,
                                    value: Name(
                                        ExprName {
                                            range: 194..195,
                                            id: "P",
                                            ctx: Load,
                                        },
                                    ),
                                    attr: Identifier {
                                        id: "args",
                                        range: 196..200,
                                    },
                                    ctx: Load,
                                },
                            ),
                        ),
                        type_comment: None,
                    },
                ),
                kwonlyargs: [],
                kwarg: Some(
                    Arg {
                        range: 204..220,
                        arg: Identifier {
                            id: "kwargs",
                            range: 204..210,
                        },
                        annotation: Some(
                            Attribute(
                                ExprAttribute {
                                    range: 212..220,
                                    value: Name(
                                        ExprName {
                                            range: 212..213,
                                            id: "P",
                                            ctx: Load,
                                        },
                                    ),
                                    attr: Identifier {
                                        id: "kwargs",
                                        range: 214..220,
                                    },
                                    ctx: Load,
                                },
                            ),
                        ),
                        type_comment: None,
                    },
                ),
            },
            body: [
                Expr(
                    StmtExpr {
                        range: 227..230,
                        value: Constant(
                            ExprConstant {
                                range: 227..230,
                                value: Ellipsis,
                                kind: None,
                            },
                        ),
                    },
                ),
            ],
            decorator_list: [],
            returns: None,
            type_params: [
                ParamSpec(
                    TypeParamParamSpec {
                        range: 182..185,
                        name: Identifier {
                            id: "P",
                            range: 184..185,
                        },
                    },
                ),
            ],
            type_comment: None,
        },
    ),
    FunctionDef(
        StmtFunctionDef {
            range: 232..273,
            name: Identifier {
                id: "func",
                range: 236..240,
            },
            args: Arguments {
                range: 261..263,
                posonlyargs: [],
                args: [],
                vararg: None,
                kwonlyargs: [],
                kwarg: None,
            },
            body: [
                Pass(
                    StmtPass {
                        range: 269..273,
                    },
                ),
            ],
            decorator_list: [],
            returns: None,
            type_params: [
                TypeVar(
                    TypeParamTypeVar {
                        range: 241..242,
                        name: Identifier {
                            id: "T",
                            range: 241..242,
                        },
                        bound: None,
                    },
                ),
                TypeVar(
                    TypeParamTypeVar {
                        range: 244..250,
                        name: Identifier {
                            id: "U",
                            range: 244..245,
                        },
                        bound: Some(
                            Name(
                                ExprName {
                                    range: 247..250,
                                    id: "str",
                                    ctx: Load,
                                },
                            ),
                        ),
                    },
                ),
                TypeVarTuple(
                    TypeParamTypeVarTuple {
                        range: 252..255,
                        name: Identifier {
                            id: "Ts",
                            range: 253..255,
                        },
                    },
                ),
                ParamSpec(
                    TypeParamParamSpec {
                        range: 257..260,
                        name: Identifier {
                            id: "P",
                            range: 259..260,
                        },
                    },
                ),
            ],
            type_comment: None,
        },
    ),
]
